--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xms512M -Xmx1G -XX:MaxPermSize=1G -XX:MaxMetaspaceSize=1G
 org.gradle.configureondemand=false
+ktxVersion = 1.9.10-b6
